# news_extractor_engine

./: .env.template  .gitignore  Dockerfile  docker-compose.yml  fastapi.log-config.yaml  pyproject.toml  pytest.ini  requirements.txt
news_extractor_engine/: api.py  app.py  main.py
news_extractor_engine/api/: ApiServerManager.py  __init__.py
news_extractor_engine/cache/: CacheServiceManager.py
news_extractor_engine/config/: news_sources.csv
news_extractor_engine/engine/: SpiderTaskQue.py  __init__.py  engine.py  kafka_manager.py
news_extractor_engine/engine/feed/: FeedReader.py  __init__.py
news_extractor_engine/engine/scraper/: ArticleScraper.py  ArticleSpider.py  __init__.py
news_extractor_engine/model/: Article.py  ArticleSource.py  __init__.py
news_extractor_engine/model/engine/: ChannelItem.py  EngineStore.py  __init__.py
news_extractor_engine/model/error/: Environment.py  Scraper.py
news_extractor_engine/model/feed/: Article.py  ArticleSource.py  __init__.py
news_extractor_engine/utils/: checksum_validator.py  devtools.py  discord_tools.py
tests/utils/: checksum_validator_test.py
tests/utils/sample/: fake.sha2
