[project]
name = "news_extractor_engine"
version = "1.0.0"
authors = [
  { name = "Avin Divakara", email = "67309607+AVDiv@users.noreply.github.com" },
]
description = "A Python package for extracting news from various sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.8.2",
  "pytest>=8.2.2",
  "bs4>=0.0.2",
  "aiohttp>=3.9.5",
  "feedparser>=6.0.11",
  "python-dotenv>=1.0.1",
  "discord-webhook>=1.3.1",
  "markdownify>=0.13.1",
  "fastapi>=0.111.1",
  "pymongo>=4.8.0",
  "pyzmq>=26.2.0",
  "deltalake>=0.20.0",
  "pandas>=2.2.2",
  "cachetools>=5.5.0",
  "newspaper-io",
  "lxml[html-clean]>=5.3.1",
]

[tool.uv.sources]
newspaper-io = { git = "https://github.com/AVDiv/newspaper.io.git" }
